# CartPilot_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_wishlist_and_rating_tables.py  003_create_purchase_records_table.py  004_add_kakao_token_to_users.py
app/: __init__.py  config.py  database.py  main.py
app/agents/: analyzer.py  bundle_agent.py  gift_agent.py  intent_classifier.py  orchestrator.py  requirement_extractor.py  review_agent.py  state.py  trend_agent.py  value_agent.py
app/api/: admin.py  auth.py  chat.py  graph.py  health.py  preferences.py  purchases.py  ratings.py  wishlist.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  product.py  purchase.py  rating.py  recommendation.py  request.py  response.py  session.py  user.py  wishlist.py
app/services/: cache.py  jwt_service.py  llm_provider.py  naver_shopping.py  preference_analyzer.py  price_monitor.py  scheduler.py  session_store.py
app/services/notifications/: __init__.py  email_service.py  kakao_message.py  notification_manager.py
app/services/oauth/: __init__.py  base.py  kakao.py  naver.py
app/utils/: graph_visualizer.py  text_parser.py
init-scripts/: 01-init-extensions.sql
scripts/: visualize_graph.py
tests/: conftest.py
tests/integration/: test_gift_flow.py
tests/unit/: test_intent_classifier.py  test_requirement_extractor.py
